<resources>
    <string name="app_name">record-shop-android-ui</string>
    <string name="update">Update</string>
    <string name="year">Year</string>
    <string name="enter_album_name">Enter album name</string>
    <string name="enter_artist_name">Enter artist name</string>
    <string name="enter_release_year">Enter release year</string>
    <string name="enter_number_in_stock">Enter number in stock</string>
    <string name="enter_genre">Enter genre</string>
    <string name="submit">Submit</string>
    <string name="search_album_name">Search album name...</string>
    <string name="search_release_year">Search release year...</string>
</resources>