<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="album"
            type="com.example.record_shop_android_ui.model.Album" />
        <variable
            name="clickHandler"
            type="com.example.record_shop_android_ui.ui.updatealbum.UpdateAlbumClickHandler" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.updatealbum.UpdateAlbumActivity">

        <ImageView
            android:id="@+id/sound_header"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:scaleType="fitStart"
            android:src="@drawable/vinyl_records_green"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/album_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_frame"
            android:hint="@string/enter_album_name"
            android:textSize="18sp"
            android:text="@={album.albumName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/sound_header"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/artist_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_frame"
            android:hint="@string/enter_artist_name"
            android:textSize="18sp"
            android:text="@={album.artistName}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album_name"
            android:layout_marginTop="15dp"/>

        <EditText
            android:id="@+id/release_year"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_frame"
            android:hint="@string/enter_release_year"
            android:textSize="18sp"
            android:inputType="number"
            android:text="@={album.releaseYear}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/artist_name"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/stock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_frame"
            android:hint="@string/enter_number_in_stock"
            android:textSize="18sp"
            android:inputType="number"
            android:text="@={album.stock}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/release_year"
            android:layout_marginTop="15dp" />

        <EditText
            android:id="@+id/genre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:background="@drawable/edittext_frame"
            android:hint="@string/enter_genre"
            android:textSize="18sp"
            android:text="@={album.genre}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/stock"
            android:layout_marginTop="15dp"/>

        <Button
            android:id="@+id/update_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="52dp"
            android:background="@drawable/rounded_button_green"
            android:backgroundTint="@color/lime_green"
            android:fontFamily="@font/forque"
            android:onClick="@{clickHandler::onUpdateButtonClicked}"
            android:text="@string/update"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <Button
            android:id="@+id/delete_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="52dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/rounded_button_red"
            android:fontFamily="@font/forque"
            android:onClick="@{clickHandler::onDeleteButtonClicked}"
            android:text="Delete"
            android:textSize="24dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/genre" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="30dp"
            android:clickable="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@android:drawable/ic_menu_revert"
            app:tint="@color/black"
            android:outlineAmbientShadowColor="@color/lime_green"
            android:onClick="@{clickHandler::onBackButtonClicked}"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>